--- a/devinmajordotcom/Views/Shared/PasswordResetEmail.cshtml
+++ b/devinmajordotcom/Views/Shared/PasswordResetEmail.cshtml
@@ -225,7 +225,7 @@ The email background color (#222222) is defined in three places:
     <![endif]-->
     <!-- Visually Hidden Preheader Text : BEGIN -->
     <div style="display: none; font-size: 1px; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden; mso-hide: all; font-family: sans-serif;">
-        You've signed up for an account on <a href="https://devinmajor.com">devinmajor.com</a>
+        You've forgotten your password on <a href="https://devinmajor.com">devinmajor.com</a>
     </div>
     <!-- Visually Hidden Preheader Text : END -->
     <!-- Create white space after the desired preview text so email clients don’t pull other distracting text into the inbox preview. Extend as necessary. -->
@@ -251,7 +251,7 @@ The email background color (#222222) is defined in three places:
 
             <tr>
                 <td style="padding: 20px 0; text-align: center">
-                    <h2 style="margin: 20px 0 20px 0; font-family: sans-serif; font-size: 25px; line-height: 22px; color: lightblue; font-weight: bold;">You've signed up for an account on <a href="https://devinmajor.com">devinmajor.com</a></h2>
+                    <h2 style="margin: 20px 0 20px 0; font-family: sans-serif; font-size: 25px; line-height: 22px; color: lightblue; font-weight: bold;">You've forgotten your password on <a href="https://devinmajor.com">devinmajor.com</a></h2>
                 </td>
             </tr>
 
@@ -289,12 +289,12 @@ The email background color (#222222) is defined in three places:
                                     <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                                         <tr>
                                             <td dir="ltr" style="font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555; padding: 10px 10px 0; text-align: left;" class="center-on-narrow">
-                                                @{ 
+                                                @{
                                                     var userString = string.IsNullOrEmpty(Model.UserName) ? Model.EmailAddress : Model.UserName;
                                                 }
                                                 <h2 style="margin: 0 0 10px 0; font-family: sans-serif; font-size: 18px; line-height: 22px; color: #333333; font-weight: bold;">Hello, @userString!</h2>
-                                                <p style="margin: 0 0 10px 0;display:inline-block;">Sorry for the formalities, we just needed to make sure the email you signed up for an account with actually goes somewhere, since we'll use it down the line to get in contact with you if necessary.</p>
-                                                <p style="margin: 0 0 10px 0;display:inline-block;">Please click the "Confirm Account" button below to complete the sign-up process on <a href="https://devinmajor.com">devinmajor.com</a>. Then you may sign in and enjoy!</p>
+                                                <p style="margin: 0 0 10px 0;display:inline-block;">We see that you've been forgetful and need your password reset. Thankfully, you recieved this email, which means you can do just that by simply clicking the link below, and following the instructions on the next page.</p>
+                                                <p style="margin: 0 0 10px 0;display:inline-block;">Please click the "Confirm Account" button below to complete the password reset process on <a href="https://devinmajor.com">devinmajor.com</a>. Then you may sign in and enjoy!</p>
                                                 <h2 style="margin: 0 0 10px 0; font-family: sans-serif; font-size: 14px; line-height: 22px; color: #333333; font-weight: bold;">Cheers, </h2>
                                                 <h2 style="margin: 0 0 10px 0; font-family: sans-serif; font-size: 14px; line-height: 22px; color: #333333; font-weight: bold;">Admins at devinmajor.com</h2>
 
@@ -303,9 +303,9 @@ The email background color (#222222) is defined in three places:
                                                     <tr>
                                                         <td class="button-td button-td-primary" style="border-radius: 4px; background: #222222;">
                                                             @{ 
-                                                                var url = "http://localhost:51450/MyHome/ConfirmAccount?GUID=" + Model.GUID;
+                                                                var url = "http://localhost:51450/MyHome/ResetPassword?GUID=" + Model.GUID;
                                                             }
-                                                            <a class="button-a button-a-primary" href="@url" target="_top" style="background: #222222; border: 1px solid #000000; font-family: sans-serif; font-size: 15px; line-height: 15px; text-decoration: none; padding: 13px 17px; display: block; border-radius: 4px;"><span class="button-link" style="color:#ffffff">Confirm Account!</span></a>
+                                                            <a class="button-a button-a-primary" href="@url" target="_top" style="background: #222222; border: 1px solid #000000; font-family: sans-serif; font-size: 15px; line-height: 15px; text-decoration: none; padding: 13px 17px; display: block; border-radius: 4px;"><span class="button-link" style="color:#ffffff">Reset My Password!</span></a>
                                                         </td>
                                                     </tr>
                                                 </table>
