--- a/devinmajordotcom/Views/MyHome/Index.cshtml
+++ b/devinmajordotcom/Views/MyHome/Index.cshtml
@@ -195,6 +195,16 @@
             $(".nav.navbar-nav.navbar-right").append(string);
         </text>
     }
+    else if(Model.CurrentUserViewModel.IsConfirmationEmailSent)
+    {
+        <text>
+            $("#ajaxAlertContainer").bootsnack({
+                alertType: 'success',
+                message: 'You have signed up for an account! Check your inbox for the confirmation email.'
+            });
+            $(".nav.navbar-nav.navbar-right").append('<li class="section-btn"><a href="#" data-toggle="modal" data-target="#modal-form">Sign in / Join</a></li>');
+        </text>
+    }
     else
     {
         <text>$(".nav.navbar-nav.navbar-right").append('<li class="section-btn"><a href="#" data-toggle="modal" data-target="#modal-form">Sign in / Join</a></li>');</text>
