--- a/devinmajordotcom/Views/Shared/_MediaLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_MediaLayout.cshtml
@@ -24,6 +24,8 @@
 
 @RenderBody()
 
+<div id="ajaxAlertContainer"></div>
+
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/jqueryval")
 @Scripts.Render("~/bundles/modernizr")
