--- a/devinmajordotcom/Views/Shared/_PortfolioLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_PortfolioLayout.cshtml
@@ -40,7 +40,7 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                 </button>
-                <a href="#" class="navbar-brand">My Professional Portfolio</a>
+                <a href="#" class="navbar-brand">My Portfolio</a>
             </div>
             <nav class="collapse navbar-collapse" id="rock-navigation">
                 <ul class="nav navbar-nav navbar-right main-navigation text-uppercase">
@@ -58,16 +58,11 @@
 
     @RenderBody()
 
-    @*<script src="~/Scripts/jquery-3.2.1.js"></script>*@
-@*<script src="~/Scripts/bootstrap.min.js"></script>*@
+    <div id="ajaxAlertContainer"></div>
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/portfolioScripts")
-    @*<script src="~/Scripts/smoothscroll.js"></script>
-    <script src="~/Scripts/jquery.nav.js"></script>
-    <script src="~/Scripts/isotope.js"></script>
-    <script src="~/Scripts/imagesloaded.min.js"></script>
-    <script src="~/Scripts/custom.js"></script>*@
 
 </body>
 </html>
