work and education are done, just need a manager for it and to fix up datetimes

--- a/devinmajordotcom/Views/Home/_ContactEmailForm.cshtml
+++ b/devinmajordotcom/Views/Home/_ContactEmailForm.cshtml
@@ -32,7 +32,16 @@
             </div>
         </div>
         <br />
-
+        
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="spinner mailSpinner" style="display: none;position:relative;top:-10px;">
+                    <span class="spinner-rotate"></span>
+                    <br />
+                </div>
+            </div>
+        </div>
+        <br />
 
         <div class="row">
             <div class="col-sm-offset-2 col-sm-8">
