--- a/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
@@ -23,9 +23,9 @@
 
         @Html.Partial("../Portfolio/_ManageProjects", Model)
         
-        @*<br/>
+        <br/>
         
-        @Html.Partial("_ManageCareerAndAcademics", Model)*@
+        @Html.Partial("../Portfolio/_ManageCareerAndAcademics", Model)
         
         <br/>
         
