got a good start on the manager

--- a/devinmajordotcom/Views/Home/Index.cshtml
+++ b/devinmajordotcom/Views/Home/Index.cshtml
@@ -42,3 +42,5 @@
 @Html.Partial("../Portfolio/_NewContactLink")
 @Html.Partial("../Portfolio/_NewWorkSkill")
 @Html.Partial("../Portfolio/_NewProject")
+@Html.Partial("../Portfolio/_NewAcademic")
+@Html.Partial("../Portfolio/_NewJob")
