--- a/devinmajordotcom/Views/Shared/MyHomeLoginSignupModal.cshtml
+++ b/devinmajordotcom/Views/Shared/MyHomeLoginSignupModal.cshtml
@@ -36,7 +36,7 @@
                                     @using (Ajax.BeginForm("Login", controllerName, new AjaxOptions { AllowCache = false, HttpMethod = "Post", InsertionMode = InsertionMode.Replace, OnSuccess = "HideLoginModal(data)", OnFailure = "LoginFailure()" }, new { @class = "loginForm" }))
                                     {
                                         @Html.AntiForgeryToken()
-                                        @Html.HiddenFor(x => x.GUID)
+                                        @Html.HiddenFor(x => x.GUID, new { @id = "hiddenGUID1" })
                                         @Html.HiddenFor(x => x.UserID)
                                         @Html.Hidden("IsSigningUp", "False", new { @id = "IsSigningUp1" })
                                         <div class="row">
@@ -80,7 +80,7 @@
                                     }
                                     @using (Ajax.BeginForm("SendPasswordResetEmail", "MyHome", null, new AjaxOptions { HttpMethod = "POST", InsertionMode = InsertionMode.Replace, OnSuccess = "PasswordResetSuccess(data);", OnFailure = "PasswordResetFailure(data);" }, new { @id = "passwordResetForm" }))
                                     {
-                                        @Html.HiddenFor(x => x.GUID)
+                                        @Html.HiddenFor(x => x.GUID, new { @id = "hiddenGUID2" })
                                         @Html.Hidden("UserName", null, new { @id = "notUserName", @class = "hiddenSignInUserName", required = "required" })
                                         @Html.ValidationMessageFor(x => x.UserName)
                                     }
@@ -93,7 +93,7 @@
                                         @Html.HiddenFor(x => x.UserIsActive)
                                         @Html.HiddenFor(x => x.UserIsAdmin)
                                         @Html.HiddenFor(x => x.UserID, new { @id="UserID1" })
-                                        @Html.HiddenFor(x => x.GUID)
+                                        @Html.HiddenFor(x => x.GUID, new { @id = "hiddenGUID3" })
                                         @Html.Hidden("IsSigningUp", "True", new { @id = "IsSigningUp2" })
                                         <div class="row">
                                             <div class="col-sm-12 text-left">
