--- a/devinmajordotcom/Views/Portfolio/_NewJob.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_NewJob.cshtml
@@ -63,7 +63,7 @@
                     <div class="col-sm-12 text-center">
                         <div class="form-group">
                             <div class="input-group date" id="date3">
-                                <input class="form-control" data-val="true" data-val-date="The field Start Date :  must be a date." id="Jobs_{{newID}}__StartDate" name="Jobs[{{newID}}].StartDate" type="text" value="">
+                                <input class="form-control datetimepicker" data-val="true" data-val-date="The field Start Date :  must be a date." id="Jobs_{{newID}}__StartDate" name="Jobs[{{newID}}].StartDate" type="text" value="">
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-calendar" style=""></span>
                                 </span>
@@ -81,7 +81,7 @@
                     <div class="col-sm-12 text-center">
                         <div class="form-group">
                             <div class="input-group date" id="date4">
-                                <input class="form-control" data-val="true" data-val-date="The field End Date :  must be a date." id="Jobs_{{newID}}__EndDate" name="Jobs[{{newID}}].EndDate" type="text" value="">
+                                <input class="form-control datetimepicker" data-val="true" data-val-date="The field End Date :  must be a date." id="Jobs_{{newID}}__EndDate" name="Jobs[{{newID}}].EndDate" type="text" value="">
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-calendar" style=""></span>
                                 </span>
