--- a/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
@@ -35,6 +35,9 @@
 
     <br />
 
+    @Html.HiddenFor(x => x.PersonalDescription.DescriptionID)
+    @Html.HiddenFor(x => x.ProfileDetails.ProfileID)
+
     <div class="row">
         <div class="col-sm-offset-2 col-sm-8">
             <input class="form-control btn btn-success" id="updatePortfolio" type="submit" value="Update Professional Portfolio">
