--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -21,6 +21,8 @@
     <meta name="theme-color" content="#ffffff">
 
     <title>@config.WebsiteName</title>
+
+    @Scripts.Render("~/bundles/chartScripts")
     
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/FineUploader/fineUploaderCSS")
